Updated examples to latest versions from: http://petstore.swagger.io/ & https://github.com/OAI/OpenAPI-Specification/
