# Examples/petstore.swagger.io/controllers/StoreController.php
@@ -44,7 +44,7 @@ abstract class StoreController
      *     in="body",
      *     name="body",
      *     description="order placed for purchasing the pet",
-     *     required=false,
+     *     required=true,
      *     @SWG\Schema(ref="#/definitions/Order")
      *   ),
      *   @SWG\Response(
@@ -63,7 +63,7 @@ abstract class StoreController
      * @SWG\Get(path="/store/order/{orderId}",
      *   tags={"store"},
      *   summary="Find purchase order by ID",
-     *   description="For valid response try integer IDs with value <= 5 or > 10. Other values will generated exceptions",
+     *   description="For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions",
      *   operationId="getOrderById",
      *   produces={"application/xml", "application/json"},
      *   @SWG\Parameter(
@@ -71,7 +71,10 @@ abstract class StoreController
      *     in="path",
      *     description="ID of pet that needs to be fetched",
      *     required=true,
-     *     type="string"
+     *     type="integer",
+     *     format="int64",
+     *     minimum=1.0,
+     *     maximum=10.0,
      *   ),
      *   @SWG\Response(
      *     response=200,
@@ -92,7 +95,7 @@ abstract class StoreController
      * @SWG\Delete(path="/store/order/{orderId}",
      *   tags={"store"},
      *   summary="Delete purchase order by ID",
-     *   description="For valid response try integer IDs with value < 1000. Anything above 1000 or nonintegers will generate API errors",
+     *   description="For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors",
      *   operationId="deleteOrder",
      *   produces={"application/xml", "application/json"},
      *   @SWG\Parameter(
@@ -100,7 +103,9 @@ abstract class StoreController
      *     in="path",
      *     description="ID of the order that needs to be deleted",
      *     required=true,
-     *     type="string"
+     *     type="integer",
+     *     format="int64",
+     *     minimum=1.0
      *   ),
      *   @SWG\Response(response=400, description="Invalid ID supplied"),
      *   @SWG\Response(response=404, description="Order not found")
